# live777

./: Cargo.toml  justfile
conf/: live777.toml  liveman.toml  livevod.toml
docker/: Dockerfile.gstreamer
docs/guide/: ffmpeg.md  live777-api.md  live777.md  liveman-api.md  liveman.md  livevod.md  recorder.md
docs/zh/guide/: ffmpeg.md  live777-api.md  live777.md  liveman-api.md  liveman.md  livevod.md  recorder.md
libs/api/src/: path.rs
libs/storage/: Cargo.toml
libs/storage/src/: config.rs  lib.rs  operator.rs  recording_id.rs  tests.rs
livecam/: Cargo.toml
liveion/: Cargo.toml
liveion/src/: config.rs  error.rs  lib.rs
liveion/src/forward/: internal.rs  mod.rs  sdp_utils.rs
liveion/src/recorder/: index.rs  meta.rs  mod.rs  segmenter.rs  sync.rs  task.rs  uploader.rs
liveion/src/recorder/codec/: h265.rs
liveion/src/route/: admin.rs  mod.rs  recorder.rs  vod.rs
liveion/src/stream/: config.rs  manager.rs
liveman/src/: tick.rs
liveman/src/entity/: recordings.rs
liveman/src/migration/: m20251210_000002_extend_recordings_table.rs  mod.rs
liveman/src/route/: mod.rs  recorder.rs  storage.rs
liveman/src/service/: recordings_index.rs
livevod/: Cargo.toml
livevod/src/: config.rs  lib.rs
src/: livevod.rs
tests/: rtp.rs
