[package]
name = "livevod"
description = "A lightweight VOD server for live777 recordings"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
axum = { workspace = true, features = ["tokio"] }
tower-http = { workspace = true, features = ["fs", "trace", "cors"] }
serde = { workspace = true, features = ["serde_derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
